fix(ui5-monthpicker): align vertically

--- a/packages/main/src/themes/MonthPicker.css
+++ b/packages/main/src/themes/MonthPicker.css
@@ -91,6 +91,7 @@
 :host([secondary-calendar-type="Persian"]) .ui5-mp-root,
 :host([secondary-calendar-type="Islamic"]) .ui5-mp-root {
 	display: grid;
+	padding: 1rem 0 1rem;
 	grid-template-columns: repeat(2, 1fr);
 	gap: var(--_ui5_monthpicker_item_margin);
 }
